# spine

./: .gitignore  Cargo.toml  LICENSE  README.md  backbone.toml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: release.sh
src/: config.rs  detect.rs  execute.rs  main.rs  notify.rs  tui.rs
