[package]
name = "spine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
which = "5.0"
dirs = "5.0"
