[package]
name = "spine-pkgman"
version = "0.2.0"
edition = "2021"
description = "The backbone of your package management ecosystem. Automatically detects and updates all installed package managers in parallel across *nix systems."
license = "MIT"
repository = "https://github.com/plyght/spine"
readme = "README.md"
keywords = ["package-manager", "automation", "system", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "spn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
which = "5.0"
dirs = "5.0"
indicatif = "0.17"
